# DefectVision-TRT

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: portfolio_checklist.md
scripts/: add_hard_negatives_from_video.py  build_tensorrt_engine.sh  convert_coco_seg_to_yolo_seg.py  extract_video_frames.py  generate_synthetic_hazelnut_piles.py  predict_hazelnut_filtered_video.py  prepare_mvtec.py  tiled_yolo_segment_image.py
src/defectvision/: benchmark.py  data.py  eval_patchcore.py  export_onnx.py  feature_extractor.py  infer.py  patchcore_lite.py  train_patchcore.py  utils.py  video_hazelnut_sorter.py  viz.py
src/defectvision_trt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
